style.css
body {
    background-color: #202020;
    color: #fff;
    font-family: 'Sans-serif', sans-serif;
    margin: 0;
    padding: 0;
    line-height: 1.6; /* New */
}

body.grid-background {
    background-image: 
        linear-gradient(0deg, transparent 24%, rgba(255,255,255,.05) 25%, rgba(255,255,255,.05) 26%, transparent 27%, transparent 74%, rgba(255,255,255,.05) 75%, rgba(255,255,255,.05) 76%, transparent 77%, transparent),
        linear-gradient(90deg, transparent 24%, rgba(255,255,255,.05) 25%, rgba(255,255,255,.05) 26%, transparent 27%, transparent 74%, rgba(255,255,255,.05) 75%, rgba(255,255,255,.05) 76%, transparent 77%, transparent);
    height: 100%;
    background-size: 50px 50px;
}

header {
    text-align: center;
    padding: 50px 0;
}

header img {
    max-width: 100%;
    height: auto;
}

h1 {
    font-size: 2.5em;
    margin-bottom: 10px;
    text-transform: uppercase; /* New */
    letter-spacing: 2px; /* New */
}

section.hover3d {
    transition: transform 0.2s ease-out;
}
section {
    max-width: 800px;
    margin: 0 auto;
    padding: 30px;
    background-color: rgba(39, 39, 39, 0.8);
    border-radius: 10px;
    margin-bottom: 20px;
    opacity: 0;
    animation: slideIn 0.5s ease-in-out forwards, fadeInOut 0.5s ease-in-out forwards;
    transition: transform 0.5s ease-in-out;
    transform-style: preserve-3d; /* New */
}

section:hover {
    transform: rotateY(20deg); /* New */
}

@keyframes fadeInOut {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

h2 {
    font-size: 1.5em;
    color: #ffcc00;
    margin-bottom: 20px;
    text-transform: uppercase; /* New */
    letter-spacing: 1px; /* New */
}

ul {
    list-style: none;
    padding: 0;
}

ul li {
    margin-bottom: 10px;
}

a {
    color: white;
    transition: color 0.2s ease-in-out;
    text-decoration: none;
}

a:hover,
a:focus,
a:active {
    color: yellow;
}

footer {
    text-align: center;
    padding: 20px 0;
    background-color: rgba(51, 51, 51, 0.8);
    color: #fff;
    position: relative;
    bottom: 0;
    opacity: 0;
    animation: fadeIn 0.5s ease-in-out forwards;
    transition: transform 0.5s ease-in-out;
}

footer:hover {
    transform: rotateX(5deg) rotateY(5deg);
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.highlight {
    color: yellow;
}

video {
    width: 100%;
    height: auto;
}

